# craps-sim

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: build.yml
craps/: __init__.py  bankroll.py  bets.py  dice_sequence.py  game.py  gui.py  strategy.py  strategy_runner.py  strategy_test_gui.py  table_gui.py
craps/strategies/: __init__.py  dont_pass.py  iron_cross.py  pass_odds.py  place_68.py  regress_and_press.py
